Fix spacing in CSS file

--- a/app/globals.css
+++ b/app/globals.css
@@ -44,7 +44,7 @@ h1, h2, h3 {
 .popup {
     visibility: hidden;
     background-color: #555;
-    color: #fff;
+    color: #A9D6E5;
     text-align: center;
     border-radius: 5px;
     padding: 10px;
@@ -56,18 +56,6 @@ h1, h2, h3 {
     transition: opacity 0.5s;
 }
 
-/* Popup Arrow */
-/* .popup::after {
-    content: "";
-    position: absolute;
-    top: 100%;
-    left: 50%;
-    margin-left: -5px;
-    border-width: 5px;
-    border-style: solid;
-    border-color: #555 transparent transparent transparent;
-} */
-
 /* Show the popup */
 .show {
     visibility: visible;
@@ -75,60 +63,56 @@ h1, h2, h3 {
 }
 
 h2 {
-font-size:xx-large;
+    font-size:xx-large;
 }
 
 .site-header {
-background-color:#012A4A;
-width:100%;
-padding:20px;
-overflow: auto;
-color:#FFF;
+    background-color:#012A4A;
+    width:100%;
+    padding:20px;
+    overflow: auto;
+    color:#A9D6E5;
     }
 
 
 .site-title {
-float:left;
+    float:left;
 }
 
 .site-navigation {
-
-float:right;
-text-align:right;
-margin:20px 50px 0px 0px;
+    float:right;
+    text-align:right;
+    margin:20px 50px 0px 0px;
 }
 
 ul.nav-menu {
-list-style-type:none;
-list-style:none;
+    list-style-type:none;
+    list-style:none;
 }
 ul.nav-menu li {
-display:inline;
-padding-right:20px;
+    display:inline;
+    padding-right:20px;
 }
 
 
 .site-header:after{
-clear:both;
+    clear:both;
 }
 
 #main {
-
-margin:0 auto;
-background-color:#FFF;
-    }
+    margin:0 auto;
+    background-color:#A9D6E5;
+}
 
 .content {
-
-max-width:60%;
-padding:30px;
-margin:50px 0px 50px 0px;
-font-size:18px;
+    max-width:60%;
+    padding:30px;
+    margin:50px 0px 50px 0px;
+    font-size:18px;
 }
 
 .content p {
-margin:50px 20px 50px 20px;
-
+    margin:50px 20px 50px 20px;
 }
 
 a.cta-button {
@@ -143,9 +127,9 @@ a.cta-button {
 }
 
 footer {
-background-color:#012A4A;
-width:100%;
-padding:20px;
-overflow: auto;
-color:#FFF;
-    }
+    background-color:#012A4A;
+    width:100%;
+    padding:20px;
+    overflow: auto;
+    color:#A9D6E5;
+}
